0.11.104
	+ Add help to model fields
	+ Fix typo in defaultEnabledValue. Now shares are enabled by default.
0.11.103
	+ Bugfix. Add and use EBox::Samba::Types::Select to avoid 
	  issues with the options cache
0.11.102
	+ Extend functinality to add custom shares and not only one per-group:
		- Any share within the file system
		- Any share automatically created under /home/samba/shares
		- Fine-grained access to the share: read-only, read and write,
		  administrator, per user and per group.
	+ Set editable attribute to 1 in User field. To comply with
	  what the type expects and avoid warnings

0.11.101
	+ New release
0.11.100
	+ Change slapd.conf ownership to module users
	+ Fix typos
	+ onInstall() functionality moved to migration script 
0.11.99
	+ Allow others to read contents from users home directory to
	publish HTML
0.11
	+ New release
0.10.99
	+ New release
0.10
	+ Create directory with 0770
	+ Add users to Domain Users group
0.9.100
	+ New release
0.9.99
	+ New release
0.9.3
	+ New release
0.9.2
	+ Add ebox backup directory as a shared resource to download/upload
	  files
	+ Create smbldap_bind.conf which contains password with mask 0600
0.9.1
	+ New release
0.9
	+ Added Polish translation
	+ Added German translation
	+ Added Dutch  translation

0.8.99
	+ New release
0.8.1
	+ bugfix. Do not mess up home directories when upgrading
	+ Minor workaround. Create slapd run directory in case it does not
	  exist
0.8
	+ New release
0.7.99
	+ Full backup mode stores shared files
	+ Unlimited i-node quota
	+ Various bug-fixes
	+ Portuguese translation
 
0.7.1
	+ Initial support for PDC
	+ GUI improvements
	+ Added update/clean actions to eobx-samba-ldap
	+ Use EBox::LDAP singleton
	+ Debian package fixes
	+ Fetch SID from configuration file
	+ Use of ebox-sudoers-friendly

0.7
	+ First public release
0.6
	+ move to client
	+ API documented using naturaldocs
	+ Update install
	+ Update debian scripts
	+ Enable/disable printer sharing and file sharing independentely